--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
+    "react-image-lightbox": "^5.0.0",
     "react-video-cover": "^1.2.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
