--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-image-lightbox": "^5.0.0",
+    "react-images": "^0.5.19",
     "react-lightbox-component": "^1.2.1",
     "react-video-cover": "^1.2.0",
     "resolve": "1.6.0",
